--- a/src/StoreToHaven/CoffinDetail.form
+++ b/src/StoreToHaven/CoffinDetail.form
@@ -118,6 +118,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="priceTF">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="TH Sarabun New" size="18" style="0"/>
+        </Property>
+      </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
           <AbsoluteConstraints x="220" y="80" width="76" height="-1"/>
