--- a/src/StoreToHeaven/OfferingDetail.form
+++ b/src/StoreToHeaven/OfferingDetail.form
@@ -115,6 +115,11 @@
       </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="priceTF">
+      <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="TH SarabunPSK" size="12" style="0"/>
+        </Property>
+      </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="bathLB">
       <Properties>
