--- a/src/ToHeaven/OfferingProductPage.form
+++ b/src/ToHeaven/OfferingProductPage.form
@@ -112,6 +112,9 @@
     <Container class="javax.swing.JScrollPane" name="jScrollPane1">
       <Properties>
         <Property name="horizontalScrollBarPolicy" type="int" value="31"/>
+        <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[800, 250]"/>
+        </Property>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout" value="org.netbeans.modules.form.compat2.layouts.DesignBorderLayout$BorderConstraintsDescription">
@@ -127,13 +130,13 @@
               <Color blue="57" green="b4" red="ff" type="rgb"/>
             </Property>
             <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-              <Dimension value="[798, 500]"/>
+              <Dimension value="[798, 250]"/>
             </Property>
           </Properties>
 
           <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
-            <Property name="columns" type="int" value="0"/>
-            <Property name="rows" type="int" value="10"/>
+            <Property name="columns" type="int" value="1"/>
+            <Property name="rows" type="int" value="0"/>
             <Property name="verticalGap" type="int" value="5"/>
           </Layout>
         </Container>
