--- a/src/ToHeaven/WreathProductPage.form
+++ b/src/ToHeaven/WreathProductPage.form
@@ -96,7 +96,7 @@
             <Property name="text" type="java.lang.String" value="&lt;&#xe22;&#xe49;&#xe2d;&#xe19;&#xe01;&#xe25;&#xe31;&#xe1a;"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="backBTActionPerformed"/>
+            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="backBTMouseClicked"/>
           </Events>
         </Component>
         <Component class="javax.swing.JButton" name="jButton1">
@@ -134,8 +134,10 @@
             <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="//wreathList.add(new WreathProduct().getData(wreath));&#xa;//wreathProductPanel.add(wreathList.get(0));"/>
           </AuxValues>
 
-          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignBoxLayout">
-            <Property name="axis" type="int" value="1"/>
+          <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
+            <Property name="columns" type="int" value="1"/>
+            <Property name="rows" type="int" value="0"/>
+            <Property name="verticalGap" type="int" value="5"/>
           </Layout>
         </Container>
       </SubComponents>
